# exe

./: CMakeLists.txt  compile_commands.json  init_compile_commands.bat  init_compile_commands.sh
src/: main.c  t.h
